# yaru

./: meson.build  meson_options.txt
gnome-shell/src/data/: gnome-shell-theme.gresource.xml
gnome-shell/src/gnome-shell-sass/: _colors.scss  _high-contrast-colors.scss  _yaru-c-colors.scss
gtk/src/: meson.build
gtk/src/dark/gtk-3.0/: _fedora-colors.scss  gtk.css  gtk.gresource.xml.in
gtk/src/dark/gtk-3.20/: _yaru-c-colors.scss  gtk.css  gtk.gresource.xml.in
gtk/src/data/: gtk-dark.css.in  gtk.css.in  gtk.gresource.xml.in
gtk/src/default/: render-assets.sh
gtk/src/default/gtk-3.0/: _colors.scss  _fedora-colors.scss  _yaru-c-colors.scss  assets.txt  gtk-dark.css  gtk-light.css  gtk.css  gtk.gresource.xml.in
gtk/src/default/gtk-3.20/: _colors.scss  _fedora-colors.scss  _yaru-c-colors.scss  assets.txt  gtk-dark.css  gtk.css  gtk.gresource.xml.in
gtk/src/light/gtk-3.0/: gtk-dark.css  gtk.css  gtk.gresource.xml.in
gtk/src/light/gtk-3.20/: gtk-dark.css  gtk.css  gtk.gresource.xml.in
icons/Suru/: cursor.theme  index.theme
icons/Suru/cursors/: left_ptr  left_ptr.cur  right_ptr  right_ptr.cur
icons/src/cursors/: render-cursors.py
icons/src/fullcolor/: render-bitmaps.py
